package service;

import model.Aluno;
import model.Disciplina;

public class SistemaDeCobranca {

    public void gerarCobranca(Aluno aluno, Disciplina disciplina) {
        // Implementar lógica de geração de cobrança
    }
}